change align from center to left

--- a/restapi/views/index.jade
+++ b/restapi/views/index.jade
@@ -6,7 +6,7 @@ table(border='1')
 		td(width='80%')
 			b PARAMETER
 	-each fab_mod in fab_modules
-		tr(align='center')
+		tr(align='left')
 			td(width='20%')= fab_mod.name
 			td(width='80%')
 				a(href=fab_mod.url )= fab_mod.parameter
