Show basic Mesos cluster info

--- a/viewer/src/templates/node-list.html
+++ b/viewer/src/templates/node-list.html
@@ -2,6 +2,6 @@
 <div class="list-group">
     <a class="list-group-item node"
        ng-repeat="node in clusterCtrl.nodes">
-        <h4>{{node.nodeHostName}}</h4>
+        <h4>{{node.hostName}}</h4>
     </a>
 </div>
