--- a/viewer/src/templates/node-list.html
+++ b/viewer/src/templates/node-list.html
@@ -1,7 +1,10 @@
-<h4>Nodes ({{clusterCtrl.nodes.length}})</h4>
+<h4>Nodes ({{clusterCtrl.getSelected().nodes.length}})</h4>
 <div class="list-group">
     <a class="list-group-item node"
-       ng-repeat="node in clusterCtrl.nodes">
-        <h4>{{node.hostName}}</h4>
+       ng-repeat="node in clusterCtrl.getSelected().nodes">
+        <h4>{{node.rack}}/{{node.hostName}}</h4>
+        <p>{{node.version}}</p>
+        <p>{{node.usedCore}}/{{node.core}}</p>
+        <p>{{node.usedMem}}/{{node.mem}}</p>
     </a>
 </div>
