--- a/viewer/src/templates/cluster-list.html
+++ b/viewer/src/templates/cluster-list.html
@@ -1,17 +1,27 @@
 <h4>Clusters ({{clusterCtrl.clusters.length}})</h4>
 <div class="list-group">
-    <div class="list-group-item cluster"
-       ng-repeat="cluster in clusterCtrl.clusters">
-        <button type="button" class="close" aria-label="Close" ng-click="clusterCtrl.delete($index)">
+    <div class="list-group-item"
+         ng-style="{ 'background-color': cluster.color }"
+         ng-repeat="cluster in clusterCtrl.clusters">
+        <button type="button"
+                class="close"
+                aria-label="Close"
+                ng-click="clusterCtrl.delete($index)">
             <span aria-hidden="true">&times;</span>
         </button>
         <a ng-click="clusterCtrl.select($index)">
             <h4>{{cluster.name}}</h4>
             <p>{{cluster.resourceManagerType}} {{cluster.resourceManagerVersion}}
                 - {{cluster.startedOn | secondsToDateTime | date:'HH:mm:ss'}}</p>
-            <button ng-show="cluster.state != 'STARTED'" type="button" class="btn btn-warning">CONNECTING</button>
-            <button ng-show="cluster.state == 'STARTED'" type="button" class="btn btn-success">STARTED</button>
-            <button ng-show="cluster.haState == 'ACTIVE'" type="button" class="btn btn-primary">HA</button>
+            <button ng-show="cluster.state != 'STARTED'"
+                    type="button"
+                    class="btn btn-warning">CONNECTING</button>
+            <button ng-show="cluster.state == 'STARTED'"
+                    type="button"
+                    class="btn btn-success">STARTED</button>
+            <button ng-show="cluster.haState == 'ACTIVE'"
+                    type="button"
+                    class="btn btn-primary">HA</button>
         </a>
     </div>
 </div>
