--- a/viewer/src/css/viewer.css
+++ b/viewer/src/css/viewer.css
@@ -16,3 +16,21 @@
  * specific language governing permissions and limitations
  * under the License.
  */
+html, body {
+    height: 100%;
+}
+.main {
+    height: 100%;
+}
+.header {
+    overflow: auto;
+    height: 12%;
+}
+.cluster-view {
+    overflow: auto;
+    height: 65%;
+}
+.log-view {
+    overflow: auto;
+    height: 23%;
+}
