--- a/viewer/src/css/viewer.css
+++ b/viewer/src/css/viewer.css
@@ -18,13 +18,24 @@
  */
 html, body {
     height: 100%;
+    padding: 0;
+    margin: 0;
 }
 .main {
     height: 100%;
+    float: right;
+    position: absolute;
 }
 .header {
     overflow: auto;
     height: 12%;
+}
+#headerbar {
+    background-color: black;
+    width: 100%;
+    float: right;
+    height: 3px;
+    cursor: col-resize;
 }
 .cluster-view {
     overflow: auto;
@@ -33,4 +44,5 @@ html, body {
 .log-view {
     overflow: auto;
     height: 23%;
+    float: bottom;
 }
