--- a/viewer/src/templates/node-list.html
+++ b/viewer/src/templates/node-list.html
@@ -18,7 +18,7 @@ under the License.
 -->
 <h4>Nodes ({{clusterCtrl.getNumberOfNodes()}})</h4>
 <div class="panel panel-primary"
-     ng-repeat="(rack,nodes) in clusterCtrl.getSelected().racks">
+     ng-repeat="(rack,nodes) in clusterCtrl.getSelected().racks track by $index">
     <div class="panel-heading">{{rack}}</div>
     <div class="panel-body list-group">
         <div class="list-group-item"
