--- a/viewer/src/css/viewer.css
+++ b/viewer/src/css/viewer.css
@@ -19,9 +19,21 @@
 html, body {
     height: 100%;
 }
+#header, #sidebar {
+    background-color: #282828;
+}
 .main {
 }
 .cluster-view {
 }
 .log-view {
+}
+.btn-circle {
+    width: 14px;
+    height: 14px;
+    text-align: center;
+    padding: 0px 0;
+    font-size: 9px;
+    line-height: 1.428571429;
+    border-radius: 15px;
 }
