--- a/viewer/src/templates/licenses.html
+++ b/viewer/src/templates/licenses.html
@@ -39,6 +39,10 @@ License: MIT
 
 UI.Layout v1.4.1 (http://angular-ui.github.io/ui-layout/)
 AngularUI Team
+License: MIT
+
+Bootswatch v3.3.6 (http://bootswatch.com)
+Copyright 2012-2015 Thomas Park
 License: MIT</pre>
 </div>
 <div class="modal-footer">
