--- a/viewer/src/templates/log-list.html
+++ b/viewer/src/templates/log-list.html
@@ -16,7 +16,7 @@ KIND, either express or implied.  See the License for the
 specific language governing permissions and limitations
 under the License.
 -->
-<div class="panel panel-info" style="height:100%">
+<div class="panel panel-default" style="height:100%">
     <div class="panel-heading">Log</div>
     <ul class="panel-body list-group" style="height:100%">
         <li class="list-group-item" ng-repeat="log in clusterCtrl.logs track by $index">
